--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,7 +1,10 @@
 .headerDiv {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #f9ddb8;
+  border-bottom: 1px solid #0a0000;
 }
 .nav-links {
   display: flex;
@@ -20,5 +23,5 @@
 }
 
 .nav-links a:hover {
-  color: #007bff;
+  color: #018246;
 }
