--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,5 +1,7 @@
 @if (tasks.length > 0) {
-<p>this is where a Task goes</p>
+<p>
+  <app-task></app-task>
+</p>
 }@else {
 <p>You don't have any tasks, jump in and create a task</p>
 }
