flipping finally was able to dynamically update the background color of a task depending on the priority. work.

--- a/src/app/shared/add-task/add-task.component.html
+++ b/src/app/shared/add-task/add-task.component.html
@@ -14,8 +14,8 @@
         name="task-priority"
         [(ngModel)]="taskPriority.value"
       >
-        @for (priority of Priorities; track priority.label) {
-        <option>{{ priority.value }}</option>
+        @for (priority of priorities; track priority.value; ) {
+        <option [ngValue]="priority.value">{{ priority.value }}</option>
         }
       </select>
       <button>Add</button>
