changed header logic and started working on editing tasks

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,4 @@
+@if (loggedIn) {
 <div class="headerDiv">
   <div class="logo">TOADO</div>
   <nav class="nav-links">
@@ -7,3 +8,11 @@
     <a href="#">Profile</a>
   </nav>
 </div>
+}@else {
+<div class="headerDiv">
+  <div class="logo">TOADO</div>
+  <nav class="nav-links">
+    <a href="#">Login</a>
+  </nav>
+</div>
+}
