finished task title editing and deleting, need to finish updating priority and color

--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -6,9 +6,36 @@
     class="task-container"
     [backgroundColor]="task.taskPriority.backgroundColor"
   >
-    <span><input type="text" placeholder="{{ task.taskTitle }}" /></span>
-    <span>{{ task.taskPriority.value }}</span>
-    <span class="material-symbols-outlined">delete</span>
+    <span (click)="startEdit(task)">
+      @if (task == taskInEditing) {}
+      <input type="text" [(ngModel)]="task.taskTitle" (blur)="saveEdit()" />
+    </span>
+    <span>
+      <select
+        name="task-priority"
+        id="task-priority"
+        (change)="editTaskPriority(task.taskPriority)"
+      >
+        @for (priority of priorities; track $index) {
+        <option [ngValue]="task.taskPriority">
+          {{ priority.value }}
+        </option>
+        }
+      </select>
+    </span>
+    <span (click)="deleteTask(task)">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        height="24px"
+        viewBox="0 -960 960 960"
+        width="24px"
+        fill="#5f6368"
+      >
+        <path
+          d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"
+        />
+      </svg>
+    </span>
   </app-task>
   }
 </p>
