--- a/src/app/shared/task/task.component.css
+++ b/src/app/shared/task/task.component.css
@@ -5,7 +5,7 @@
   width: 80%;
   margin: 0 auto;
   padding: 10px;
-
+  margin-top: 5px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
