--- a/src/app/task-list/task-list.component.css
+++ b/src/app/task-list/task-list.component.css
@@ -20,3 +20,9 @@
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 3px;
 }
+.task-title {
+  width: 100%;
+}
+.drop-down {
+  width: 100%;
+}
