finished working on routing, have a bug that loggedIn changes on refresh

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,17 +2,17 @@
 <div class="headerDiv">
   <div class="logo">TOADO</div>
   <nav class="nav-links">
-    <a href="#">Today</a>
-    <a href="#">Overview</a>
-    <a href="#">History</a>
-    <a href="#">Profile</a>
+    <a>Welcome</a>
+    <a>Tasks</a>
+    <a>Profile</a>
+    <a>Logout</a>
   </nav>
 </div>
 }@else {
 <div class="headerDiv">
   <div class="logo">TOADO</div>
   <nav class="nav-links">
-    <a href="#">Login</a>
+    <a>Register</a>
   </nav>
 </div>
 }
