added logout functionality

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,7 +5,7 @@
     <a>Welcome</a>
     <a>Tasks</a>
     <a>Profile</a>
-    <a>Logout</a>
+    <a (click)="onLogOut()">Logout</a>
   </nav>
 </div>
 }@else {
